[package]
name = "ibc-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ibc_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
ibc = { version = "0.27.0", features = ["borsh"] }
ibc-proto = { version = "0.24.1", features = ["borsh"] }
sha2 = "0.10.6"